--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "koa-router": "^13.0.1",
         "koa-zod-router": "^2.3.0",
         "tsx": "^4.19.1",
+        "typesync": "^0.14.3",
         "zod": "^3.23.8"
     },
     "devDependencies": {
