--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "koa-zod-router": "^2.3.0",
         "tsx": "^4.19.1",
         "typesync": "^0.14.3",
+        "uuid": "^11.1.0",
         "zod": "^3.24.4"
     },
     "devDependencies": {
