added implementation in docker-compose.yml to connect to a mongodb database

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,3 +7,13 @@ services:
     volumes:
       - ../..:/workspaces:cached
     command: sleep infinity
+  mongo:
+    image: mongo:latest
+    container_name: bookstore
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+    restart: unless-stopped
+  volumes:
+    mongo-data
