--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "license": "ISC",
     "dependencies": {
         "@koa/cors": "^5.0.0",
+        "@types/mongoose": "^5.11.96",
         "koa": "^2.15.3",
         "koa-bodyparser": "^4.4.1",
         "koa-qs": "^3.0.0",
         "koa-router": "^13.0.1",
         "koa-zod-router": "^2.3.0",
+        "mongoose": "^8.15.0",
         "tsx": "^4.19.1",
         "typesync": "^0.14.3",
         "uuid": "^11.1.0",
@@ -28,6 +30,6 @@
         "@types/koa-router": "^7.4.8",
         "@types/node": "^22.5.5",
         "ts-node": "^10.9.2",
-        "typescript": "^5.6.2"
+        "typescript": "^5.8.3"
     }
 }
