updated and improve docs for assignment-2.ts, and the backend routes in routes.ts, and stremalined things for the book model

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "assignment-1",
     "version": "1.0.0",
-    "description": "This is a template repository for the first assignment in BVD 103 at McMaster Continuing Education.",
+    "description": "This is a template repository for the second assignment in BVD 103 at McMaster Continuing Education.",
     "main": "index.js",
     "scripts": {
         "start-server": "ts-node src/server.ts"
