--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-    "name": "assignment-1",
+    "name": "assignment-3",
     "version": "1.0.0",
-    "description": "This is a template repository for the second assignment in BVD 103 at McMaster Continuing Education.",
+    "description": "This is a template repository for the third assignment in BVD 103 at McMaster Continuing Education.",
     "main": "index.js",
     "scripts": {
-        "start-server": "ts-node src/server.ts"
+        "start-server": "ts-node src/server.ts",
+        "lint": "eslint ./src --ext .ts",
+        "fix-lint": "eslint ./src --ext .ts --fix",
+        "format": "prettier --write \"src/**/*.ts\"",
+        "type-check": "tsc --noEmit"
     },
     "keywords": [],
     "author": "",
@@ -24,12 +28,22 @@
         "zod": "^3.24.4"
     },
     "devDependencies": {
+        "@babel/cli": "^7.27.2",
+        "@babel/core": "^7.27.1",
+        "@babel/preset-env": "^7.27.2",
+        "@eslint/js": "^9.27.0",
         "@types/koa": "^2.15.0",
         "@types/koa__cors": "^5.0.0",
         "@types/koa-qs": "^2.0.3",
         "@types/koa-router": "^7.4.8",
         "@types/node": "^22.5.5",
+        "eslint": "^9.27.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.4.0",
+        "globals": "^16.2.0",
+        "prettier": "^3.5.3",
         "ts-node": "^10.9.2",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.32.1"
     }
 }
