added packages to begin add testing to repo, and configured testing to ensures that its functional locally, and in the CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,9 @@ name: CI
 
 on:
   push:
-    branches:
-      - '**'
+    branches: [main]
   pull_request:
-    branches:
-      - '**'
+    branches: [main]
 
 jobs:
   lint:
@@ -65,3 +63,6 @@ jobs:
 
       - name: Run Type Check
         run: npm run type-check
+
+      - name: Run tests
+        run: npm run test:ci
