--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-    "name": "assignment-3",
+    "name": "assignment-4",
     "version": "1.0.0",
-    "description": "This is a template repository for the third assignment in BVD 103 at McMaster Continuing Education.",
+    "type": "module",
+    "description": "This is a template repository for the fourth assignment in BVD 103 at McMaster Continuing Education.",
     "main": "index.js",
     "scripts": {
         "start-server": "ts-node src/server.ts",
         "lint": "eslint ./src --ext .ts",
         "fix-lint": "eslint ./src --ext .ts --fix",
         "format": "prettier --write \"src/**/*.ts\"",
-        "type-check": "tsc --noEmit"
+        "type-check": "tsc --noEmit",
+        "test": "vitest",
+        "test:watch": "vitest --watch",
+        "test:ci": "vitest run"
     },
     "keywords": [],
     "author": "",
@@ -22,7 +26,6 @@
         "koa-router": "^13.0.1",
         "koa-zod-router": "^2.3.0",
         "mongoose": "^8.15.0",
-        "tsx": "^4.19.1",
         "typesync": "^0.14.3",
         "uuid": "^11.1.0",
         "zod": "^3.24.4"
@@ -36,14 +39,18 @@
         "@types/koa__cors": "^5.0.0",
         "@types/koa-qs": "^2.0.3",
         "@types/koa-router": "^7.4.8",
-        "@types/node": "^22.5.5",
+        "@types/node": "^22.15.30",
+        "@vitest/ui": "^3.2.2",
         "eslint": "^9.27.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.4.0",
         "globals": "^16.2.0",
         "prettier": "^3.5.3",
         "ts-node": "^10.9.2",
+        "tsx": "^4.19.4",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.32.1"
+        "typescript-eslint": "^8.32.1",
+        "vite": "^6.3.5",
+        "vitest": "^3.2.2"
     }
 }
