--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.4.0",
         "globals": "^16.2.0",
+        "mongodb-memory-server": "^10.1.4",
         "prettier": "^3.5.3",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.4",
