--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "name": "assignment-4",
     "version": "1.0.0",
-    "type": "module",
     "description": "This is a template repository for the fourth assignment in BVD 103 at McMaster Continuing Education.",
     "main": "index.js",
     "scripts": {
-        "start-server": "ts-node src/server.ts",
+        "start-server": "tsx src/server.ts",
         "lint": "eslint ./src --ext .ts",
         "fix-lint": "eslint ./src --ext .ts --fix",
         "format": "prettier --write \"src/**/*.ts\"",
