completed implementation of setting up testing with a database.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,13 @@
     "module": "node16",
     "target": "es2022",
     "strict": true,
+    "types": ["vitest", "node"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node16",
     "inlineSourceMap": true,
     "resolveJsonModule": true,
-  }
+  },
+  "include": ["src", "test"]
 }
