--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,5 +64,22 @@ jobs:
       - name: Run Type Check
         run: npm run type-check
 
+  test:
+    name: Run Tests
+    needs: [lint, format, type-check]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run tests
         run: npm run test:ci
