made a small change to start script to resolve issue with ci tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "This is a template repository for the fourth assignment in BVD 103 at McMaster Continuing Education.",
     "main": "index.js",
     "scripts": {
-        "start-server": "tsx src/server.ts",
+        "start": "tsx src/server.ts",
         "lint": "eslint ./src --ext .ts",
         "fix-lint": "eslint ./src --ext .ts --fix",
         "format": "prettier --write \"src/**/*.ts\"",
