made changes to tests to get the rest of the test to pass part #3

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "fix-lint": "eslint ./src --ext .ts --fix",
         "format": "prettier --write \"src/**/*.ts\"",
         "type-check": "tsc --noEmit",
-        "test": "vitest",
+        "test": "USE_DB=true vitest",
         "test:watch": "vitest --watch",
         "test:ci": "vitest run"
     },
