completed assignment 5: step 2 - Generating a client SDK

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
     "description": "This is a template repository for the fourth assignment in BVD 103 at McMaster Continuing Education.",
     "main": "index.js",
     "scripts": {
-        "start": "tsx src/server.ts",
-        "lint": "eslint ./src --ext .ts",
+        "start": "./generate-openapi.sh && tsx src/server.ts",
+        "mcmasterful-books": "mcmasterful-books",
+        "lint": "./generate-openapi.sh && eslint ./src --ext .ts",
         "fix-lint": "eslint ./src --ext .ts --fix",
         "format": "prettier --write \"src/**/*.ts\"",
-        "type-check": "tsc --noEmit",
-        "test": "USE_DB=true vitest",
-        "test:watch": "vitest --watch",
-        "test:ci": "vitest run"
+        "type-check": "./generate-openapi.sh && tsc --noEmit",
+        "test": "./generate-openapi.sh && USE_DB=true vitest",
+        "test:watch": "./generate-openapi.sh && vitest --watch",
+        "test:ci": "./generate-openapi.sh && vitest run"
     },
     "keywords": [],
     "author": "",
@@ -37,6 +38,7 @@
         "@babel/core": "^7.27.1",
         "@babel/preset-env": "^7.27.2",
         "@eslint/js": "^9.27.0",
+        "@openapitools/openapi-generator-cli": "^2.21.0",
         "@types/koa": "^2.15.0",
         "@types/koa__cors": "^5.0.0",
         "@types/koa-qs": "^2.0.3",
@@ -50,7 +52,7 @@
         "mongodb-memory-server": "^10.1.4",
         "prettier": "^3.5.3",
         "ts-node": "^10.9.2",
-        "tsx": "^4.19.4",
+        "tsx": "^4.20.3",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.32.1",
         "vite": "^6.3.5",
