--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,12 +7,12 @@
 	"service": "dev",
 	"workspaceFolder": "/workspaces/mcMasterful-books-bdv-103",
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/tsx:1": {},
-		"ghcr.io/mcmastercce/bvd-103-mcmasterful-books/mcmasterful-books:latest": {}
+		// "ghcr.io/devcontainers-contrib/features/tsx:1": {},
+		"ghcr.io/mcmastercce/bvd-103-mcmasterful-books/mcmasterful-books:latest": {},
+		"ghcr.io/devcontainers/features/java": {}
 	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
