--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,9 @@ jobs:
           node-version: 20
       - run: npm ci
 
+      - name: Generate OpenAPI Spec and Client SDK
+        run: ./generate-openapi.sh
+
       - name: Start API server
         run: npm run start &
         env:
@@ -79,3 +82,9 @@ jobs:
         run: npm run test:ci
         env:
           MONGO_URI: mongodb://localhost:27017/booksdb
+      
+      - name: Upload Client SDK
+        uses: actions/upload-artifact@v3
+        with:
+          name: client-sdk
+          path: client/
