--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,41 @@
+# Define cache path
+proxy_cache_path /tmp/nginx_cache levels=1:2 keys_zone=my_cache:10m max_size=100m inactive=60m use_temp_path=off;
+
+# Define upstream backend with round-robin across 3 servers
+upstream backend {
+    server server:3000;
+    server server2:3000;
+    server server3:3000;
+}
+
 server {
   listen 80;
 
+  # Frontend
   location / {
     proxy_pass http://front-end:9080/;
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+    proxy_set_header Connection '';
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/javascript;
+    gzip_vary on;
   }
 
+  # API – Load Balanced
   location /api/ {
-    proxy_pass http://server:3000/;
+    proxy_pass http://backend/;
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+    proxy_set_header Connection '';
+  }
+
+  # Cache unfiltered book list
+  location ~ ^/api/books$ {
+    proxy_pass http://backend;
+    proxy_cache my_cache;
+    proxy_cache_valid 200 10m;
+    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+    add_header X-Cache-Status $upstream_cache_status;
   }
 }
