--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,12 @@ services:
     ports:
       - "27017:27017"
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
   front-end:
     image: ghcr.io/mcmastercce/bvd-103-mcmasterful-books/mcmasterful-books-docker:main
     volumes:
@@ -40,7 +46,7 @@ services:
     working_dir: /app
     command: npx -y tsx src/server.ts
     ports:
-      - "3000:3000"
+      - "3001:3000"
     depends_on:
       - mongo
 
@@ -51,6 +57,6 @@ services:
     working_dir: /app
     command: npx -y tsx src/server.ts
     ports:
-      - "3000:3000"
+      - "3002:3000"
     depends_on:
       - mongo
