--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   nginx:
     image: nginx:latest
@@ -42,13 +41,16 @@ services:
   server2:
     image: node:20
     volumes:
-      - ./:/app
+      - ./orders-service:/app
     working_dir: /app
     command: npx -y tsx src/server.ts
     ports:
       - "3001:3000"
     depends_on:
       - mongo
+      - rabbitmq
+    environment:
+      - USE_DOCKER=true
 
   server3:
     image: node:20
