--- a/orders-service/tsconfig.json
+++ b/orders-service/tsconfig.json
@@ -1,22 +1,13 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node 20",
-  "_version": "20.1.0",
-
   "compilerOptions": {
-    "lib": ["ES2020", "DOM"],
-    "module": "node16",
-    "target": "ES2020",
-    "strict": true,
-    "types": ["vitest", "node", "./src/types/koa"],
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node16",
-    "inlineSourceMap": true,
-    "resolveJsonModule": true,
-  },
-  "include": ["src", "test"]
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  }
 }
