--- a/listings-service/package.json
+++ b/listings-service/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "@types/dotenv": "^6.1.1",
     "amqplib": "^0.10.8",
+    "dotenv": "^17.2.0",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
     "koa-qs": "^3.0.0",
