--- a/adapter/Dockerfile
+++ b/adapter/Dockerfile
@@ -1,6 +1,10 @@
 FROM node:18
 
 WORKDIR /app
-COPY . .
+
+COPY ../package.json ../package-lock.json* ./
+COPY . ./
+
 RUN npm install
+
 CMD ["npm", "run", "dev"]
